converting to delete mapping for reservations